--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title>ChatCord App</title>
+		<title>TalkNest</title>
 	</head>
 	<body>
 		<div class="join-container">
@@ -33,12 +33,12 @@
 					<div class="form-control">
 						<label for="room">Room</label>
 						<select name="room" id="room">
-							<option value="JavaScript">JavaScript</option>
-							<option value="Python">Python</option>
-							<option value="PHP">PHP</option>
-							<option value="C#">C#</option>
-							<option value="Ruby">Ruby</option>
-							<option value="Java">Java</option>
+							<option value="Tech">Tech</option>
+							<option value="Art">Art</option>
+							<option value="Science">Science</option>
+							<option value="Music">Music</option>
+							<option value="Random">Random</option>
+							<option value="Fun">Fun</option>
 						</select>
 					</div>
 					<button type="submit" class="btn">Join Chat</button>
