add: add a group to the available chatrooms

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 							<option value="Tech">Tech</option>
 							<option value="Art">Art</option>
 							<option value="Science">Science</option>
-							<option value="Music">Music</option>
+							<option value="Betting">Betting</option>
 							<option value="Random">Random</option>
 							<option value="Fun">Fun</option>
 						</select>
