--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,8 @@
 							<option value="Betting">Betting</option>
 							<option value="Random">Random</option>
 							<option value="Fun">Fun</option>
+							<option value="Adult">Adult</option>
+
 						</select>
 					</div>
 					<button type="submit" class="btn">Join Chat</button>
